--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node backend/server.js",
-    "dev":"nodemon backend/server.js"
+    "dev": "nodemon backend/server.js"
   },
   "author": "Manish",
   "license": "ISC",
@@ -23,7 +23,7 @@
     "mongoose": "^7.2.3",
     "morgan": "^1.10.0",
     "winston": "^3.9.0",
-    "winston-daily-rotate": "^0.0.1"
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
