feat: setup nginx reverse proxy with docker

--- a/local.yml
+++ b/local.yml
@@ -11,8 +11,8 @@ services:
       - .:/app
     depends_on:
       - mongodb
-    ports:
-      - "5000:8000"
+    # ports:
+    #   - "5000:8000"
     environment:
       NODE_ENV: ${NODE_ENV}
       MONGO_URI: mongodb//${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@mongodb
@@ -20,6 +20,17 @@ services:
     networks:
       - invoice
   
+  client:
+    build:
+      context: ./client
+      dockerfile: ./docker/local/Dockerfile
+    restart: on-failure
+    volumes:
+      - ./client:/app
+      - /app/node_modules
+    networks:
+      - invoice
+
   mongodb:
     image: mongo:5.0.6-focal
     restart: always
@@ -56,8 +67,24 @@ services:
     networks:
       - invoice
 
+  nginx:
+    build:
+      context: ./docker/local/nginx
+      dockerfile: Dockerfile
+    ports:
+      - "8080:80"
+    restart: always
+    depends_on:
+      - api
+    volumes:
+      - static_volume:/app/staticfiles
+      - pdf_volume:/app/docs
+    networks:
+      - invoice
 networks:
   invoice:
     driver: bridge
 volumes:
   mongodb-data:
+  static_volume:
+  pdf_volume:
