--- a/local.yml
+++ b/local.yml
@@ -15,7 +15,7 @@ services:
     #   - "5000:8000"
     environment:
       NODE_ENV: ${NODE_ENV}
-      MONGO_URI: mongodb//${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@mongodb
+      MONGO_URI: mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@mongodb
       FORCE_COLOR: 1
     networks:
       - invoice
